SF Primes/src/objects/Installed_Laser_Product__c.object
<CustomObject>
    <description>Allows for the Laser Fulfillment team to track laser related assets</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance-Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar Code-Parts Inv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Signature Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP-F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAP-P&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eShowroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I/DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICR-Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYROLL PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHOWROOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WDS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>Installed Laser Products</relationshipLabel>
        <relationshipName>R00N40000001m7ybEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <formula>CMF_Info__r.Ship_CMF__c</formula>
        <label>CMF #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Number__c</fullName>
        <label>Catalog Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Laser_Installed_Products_Comments__c</fullName>
        <label>Laser Installed Products Comments</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Installed Laser Product</label>
    <nameField>
        <displayFormat>ILP-{00000}</displayFormat>
        <label>Installed Laser Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Laser Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Install_Date_Required_If_Installed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c, &quot;Installed&quot;),  ISNULL(Install_Date__c ))</errorConditionFormula>
        <errorDisplayField>Install_Date__c</errorDisplayField>
        <errorMessage>An Install Date is required if the product is installed.</errorMessage>
    </validationRules>
</CustomObject>